# livecopilot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INGESTION_POLICY.md  LICENSE  README.md  REALTIME_MVP.md  ROADMAP.md  SECURITY.md  STATUS.md  codex_loop.sh  loop  project_state.md  requirements.txt
codex-supervisor/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
codex-supervisor/.codex/: config.toml
codex-supervisor/docs/: gpt_tool_host_contract.md
codex-supervisor/scripts/: run_gpt_tool_host.sh
codex-supervisor/supervisor/: __init__.py  api_client.py  codex_bridge.py  config.py  gpt_adapter.py  gpt_tool_host.py  http_api.py  main.py  project_journal.py  prompts.py  service.py  state_store.py  workflow.py
lab/projects/pipeline-lab/: README.md  STATUS.md  pyproject.toml
lab/projects/pipeline-lab/app/: main.py
lab/projects/pipeline-lab/docs/: DAILY_USAGE.md  DOMAIN_SPEC_SCHEMA.md  EXECUTION_PROTOCOL.md  HANDOFF_PIPELINE_LAB_ACCESS_FIXED_20260318T031838Z.md  HANDOFF_PIPELINE_LAB_ACCESS_VALIDATION_20260318T033806Z.md  HANDOFF_PIPELINE_LAB_DAILY_USE_IMPROVEMENTS_20260318T025513Z.md  HANDOFF_PIPELINE_LAB_FIRST_RUN_20260318T003000Z.md  HANDOFF_PIPELINE_LAB_MULTI_STAGE_EXECUTION_20260318T012000Z.md  HANDOFF_PIPELINE_LAB_NETWORK_ACCESS_20260318T031201Z.md  HANDOFF_PIPELINE_LAB_NEXT_STAGE_UI_API_20260318T020000Z.md  HANDOFF_PIPELINE_LAB_REAL_STAGE_ARTIFACT_20260318T014200Z.md  HANDOFF_PIPELINE_LAB_STAGE_EXECUTION_20260318T010500Z.md  HANDOFF_PIPELINE_LAB_STAGE_GATES_20260318T015000Z.md  PROJECT_SCOPE.md  (+3 more)
(+1148 files in other folders)
