[project]
name = "codex-supervisor"
version = "0.1.0"
description = "Local supervisor skeleton for Codex CLI MCP orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai",
  "openai-agents",
  "python-dotenv",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["supervisor"]
